<resources>
    <string name="app_name">The New York Times</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="begin_date">Begin Date</string>
    <string name="button_apply">Apply</string>
    <string name="api_failure_message">Oops! something went wrong</string>

    <string-array name="sort_options">
        <item>oldest</item>
        <item>newest</item>
    </string-array>

    <string name="news_desk">News Desk</string>
    <string name="sort_order">Sort Order</string>
    <string name="share_link">Share Link</string>
    <string name="newest">newest</string>
    <string name="share_article">Share</string>
    <string name="share_intent_title">Share Article</string>
    <string name="share_subject">Hey! Check this out from The New York Times.</string>
    <string name="status_message">Settings Updated</string>
    <string name="internet_unavailable_message">Can\'t connection to the internet at the moment</string>
    <string name="generic_failure_message">Unable to get the news at the moment</string>
</resources>
