<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.news.activities.FilterActivity">

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        />

    <EditText
        android:id="@+id/etBeginDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBeginDate"/>

    <Spinner
        android:id="@+id/spSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sort_options"
        android:layout_below="@+id/etBeginDate">
    </Spinner>

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spSort"
        android:text="@string/arts"
        />

    <CheckBox
        android:id="@+id/cbFashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbArts"
        android:text="@string/fashion_style"/>

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbFashion"
        android:text="@string/sports"/>
    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_apply"
        android:layout_alignParentBottom="true">
    </Button>
</RelativeLayout>
