<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="settings"
            type="com.codepath.news.models.FilterSettings" />
    </data>

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.codepath.news.fragments.FilterDialogFragment">

        <TextView
            android:id="@+id/tvBeginDate"
            style="@style/filter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/begin_date" />

        <DatePicker
            android:id="@+id/dpBeginDate"
            style="@style/date_picker_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBeginDate"
            android:layout_marginBottom="10dp"
            android:day='@{settings.beginDay}'
            android:month='@{settings.beginMonth}'
            android:year='@{settings.beginYear}' />

        <TextView
            android:id="@+id/tvSortOrder"
            style="@style/filter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dpBeginDate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/sort_order" />

        <Spinner
            android:id="@+id/spSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSortOrder"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:entries="@array/sort_options"
            android:selection='@{settings.sortSelectedIndex}' />

        <TextView
            android:id="@+id/tvNewsDesk"
            style="@style/filter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spSort"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/news_desk" />

        <CheckBox
            android:id="@+id/cbArts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNewsDesk"
            android:layout_marginStart="50dp"
            android:checked='@{settings.checkedArts}'
            android:text="@string/arts" />

        <CheckBox
            android:id="@+id/cbFashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbArts"
            android:layout_marginStart="50dp"
            android:checked='@{settings.checkedFashion}'
            android:text="@string/fashion_style" />

        <CheckBox
            android:id="@+id/cbSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbFashion"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="50dp"
            android:checked='@{settings.checkedSports}'
            android:text="@string/sports" />

        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbSports"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/button_apply" />
    </RelativeLayout>
</layout>